--- a/assets/styles/default.css
+++ b/assets/styles/default.css
@@ -18,3 +18,11 @@ h1, h2, h3, h4, h5, h6 {
 p {
     text-align: center;
 }
+
+hidden {
+    width: 0px;
+    height: 0px;
+    margin: 0px;
+    padding: 0px;
+    display: none;
+}
