--- a/assets/styles/sandbox.css
+++ b/assets/styles/sandbox.css
@@ -1,9 +1,9 @@
 .sandbox_container {
     color: black;
-    width: 1280px;
-    height: 720px;
     margin: 0 auto;
     position: relative;
+    width: 1px;
+    height: 1px;
 }
 
 .sandbox_container * {
@@ -17,13 +17,13 @@
 
 .sandbox_overlay {
     z-index: 2;
-    width: 1280px;
-    height: 720px;
+    width: 100%;
+    height: 100%;
 }
 
 .sandbox_overlay * {
     position: relative;
     text-align: unset;
-    padding: 0;
+    padding: 4px;
     margin: 0;
 }
